--- a/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
@@ -177,7 +177,7 @@
                         <TextBox.Text>
                             <Binding Path="EditDescriptionFieldValue" UpdateSourceTrigger="PropertyChanged">
                                 <Binding.ValidationRules>
-                                    <valudationRules:InRange Max="{x:Static constants:ModelConstants.DictionaryDescriptionMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>
+                                    <!--<valudationRules:InRange Max="{x:Static constants:ModelConstants.DictionaryDescriptionMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>-->
                                 </Binding.ValidationRules>
                             </Binding>
                         </TextBox.Text>
